force-app/main/default/objects/PHSS_Email_Notification__mdt/PHSS_Email_Notification__mdt.object-meta.xml
<CustomObject>
    <label>PHSS Email Notification</label>
    <pluralLabel>PHSS Email Notifications</pluralLabel>
</CustomObject>