force-app/main/default/objects/PHSS_Email_Notification__mdt/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>