force-app/main/default/objects/PHSS_Email_Notification__mdt/fields/CC_Receivers__c.field-meta.xml
<CustomField>
    <fullName>CC_Receivers__c</fullName>
    <description>CSV list of CC Receivers</description>
    <label>CC Receivers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>