force-app/main/default/objects/PHSS_Email_Notification__mdt/fields/Not_Processed_Message__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Message__c</fullName>
    <label>Not Processed Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>