force-app/main/default/objects/PHSS_Email_Notification__mdt/fields/Receivers__c.field-meta.xml
<CustomField>
    <fullName>Receivers__c</fullName>
    <label>Receivers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>